# clownfishgenetics

./: .gitignore  .pre-commit-config.yaml  animals.json  clean_phenotype.py  cleaned_phenotype.py  clownfish.yaml  clownfish2.yaml  data.yaml  fish.py  fishwork.py  fmtIt.py  initial_data.yaml  initial_locus_data.yaml  manage.py  new.yaml  newPhen.py  package-lock.json  package.json  parse_phenotype.ps1  phenotype.py  phenotypes_list.txt  pyproject.toml  requirements.txt  tailwind.config.js  trait.yaml
.github/workflows/: deploy.yml
calcRefactor/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
calcRefactor/migrations/: 0001_initial.py  0002_alter_cross_options_alter_parent_options_and_more.py  0003_crossnamingrule_progenynamingrule.py  0004_alter_progeny_phenotype_name.py  0005_variety_genus_variety_hybrid_variety_variant.py  0006_auto_20251111_2133.py  0007_update_variety_genotype_patterns.py
calcRefactor/templates/calcRefactor/: base.html  cross_detail.html  cross_form.html  cross_list.html  cross_results.html  parent_detail.html  parent_form.html  parent_list.html  variety_detail.html  variety_form.html  variety_list.html
calculator/: admin.py  forms.py  models.py  urls.py  views.py
calculator/migrations/: 0001_initial.py  0002_remove_allele_dominance_rules_and_more.py  0003_clownfish.py  0004_remove_clownfish_genotype_clownfishgenotype_and_more.py  0005_alter_clownfish_options.py  0006_clownfish_hybrid_clownfish_variant.py  0007_seed_and_populate_genotypes.py  0008_populate_genotype_phenotype_map.py
calculator/templates/calculator/: base.html  calculator_input.html  calculator_result.html  home.html  parent_selection_input.html  parent_selection_result.html
clownfishgenetics/: asgi.py  settings.py  urls.py  wsgi.py
config/: middleware.py  settings.py  urls.py
crossTesting/pyUpdatedto3/: fmtIt.py  newPhen.py  phenotype.py
crossTesting/tests/: conftest.py  test_phenotype.py
genetics_manager/: admin.py  apps.py  calculator_utils.py  models.py  views.py
genetics_manager/management/commands/: dedupe_phenotypes.py  process_genotypes.py  process_phenotypes.py
genetics_manager/migrations/: 0001_initial.py  0002_commercialphenotyperecipe_created_by_and_more.py  0003_alter_commercialphenotyperecipe_required_genotypes.py  0004_alter_commercialphenotyperecipe_name.py  0005_alter_commercialphenotyperecipe_phenotype.py  0006_alter_commercialphenotyperecipe_genotype_and_more.py  0007_alter_commercialphenotyperecipe_slug.py  0008_alter_commercialphenotyperecipe_description.py  0009_alter_commercialphenotyperecipe_breeder_name.py
genetics_manager/tests/: test_dummy.py
landing/: urls.py  views.py
landing/templates/landing/: index.html  landing.html
landing/templates/landing/partials/: fish_cards_partial.html  results_partial.html  selection_bar_partial.html
static/css/: main.css  output.css
static/css/src/: style.css
templates/account/: base.html  login.html  signup.html
tests/: test_dummy.py  test_placeholder.py
