[project]
name = "clownfishgenetics"
description = "Clownfish Genetics Org website"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "black==25.9.0",
    "click==8.3.0",
    "cryptography>=46.0.3",
    "django==5.2.6",
    "django-allauth==65.13.0",
    "django-environ==0.12.0",
    "django-filter==25.1",
    "django-htmx>=1.26.0",
    "djangorestframework==3.16.1",
    "markdown==3.9",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "phonenumbers==9.0.14",
    "pillow==11.3.0",
    "platformdirs==4.5.0",
    "pre-commit>=4.4.0",
    "psycopg2-binary==2.9.10",
    "pyjwt>=2.10.1",
    "pytest>=9.0.1",
    "pytokens==0.2.0",
    "pyyaml==6.0.2",
    "requests>=2.32.5",
    "sqlparse==0.5.3",
    "tzdata==2025.2",
]

[tool.ruff]
# Consistent Ruff settings: exclude migrations and set a consistent line length
exclude = [
    "**/migrations/*.py",
    "phenotype.py",
    "fishwork.py",
    "fish.py",
    "cleaned_phenotype.py",
]
line-length = 88

[tool.ruff.lint]
# Enable a comprehensive set of rules including security and Django specific checks
select = ["E", "W", "F", "I", "UP", "B", "C4", "DJ", "S"]

# Ignore rules related to missing documentation strings (D-codes from pydocstyle)
ignore = ["D100", "D101", "D102", "D103", "D104", "S101"]

[tool.ruff.format]
exclude = [
    "**/migrations/*.py",
    "phenotype.py",
    "fishwork.py",
    "fish.py",
    "cleaned_phenotype.py",
]
# Consistent formatting style: double quotes and spaces
quote-style = "double"
indent-style = "space"
